src/components/common/Common.module.css
/* ... */
.contentHeaderBackground :global .ant-input-search>.ant-input-group>.ant-input-group-addon:last-child .ant-input-search-button:not(.ant-btn-primary) {
    background-color: #ffffff;
    border-left: #ffffff;
    border-radius: 0px 3px 3px 0;
    margin-right: -1px;
}

.contentHeaderBackground .selectSearchBg :global .ant-input-search>.ant-input-group>.ant-input-group-addon:last-child .ant-input-search-button:not(.ant-btn-primary) {
    margin-top: -4px;
}

.contentHeaderBackground :global .ant-input-search>.ant-input-group .ant-input-affix-wrapper:not(:last-child) {
    border-start-start-radius: 3px;
    border-end-start-radius: 3px;
}

.contentHeaderBackground :global .ant-input-search>.ant-input-group>.ant-input-group-addon:last-child .ant-input-search-button:not(.ant-btn-primary):disabled {
    background-color: #e6e6e6;
    border-left: #e6e6e6;
}

.contentHeaderBackground .userManagement :global .ant-btn-link {
    color: #0b0b0c;
    font-weight: 500;
}

.contentHeaderBackground .dataDisplay {
    margin-top: 10px;
    padding: 10px 0 0 0;
    padding-bottom: 0;
    border-top: 1px solid #e6e6e6;
}

.contentHeaderBackground .errorDisplay {
    color: #ed302d;
}

.contentHeaderBackground .contentHeading {
    font-size: 12px;
    color: rgba(116, 116, 116, 0.85);
    font-weight: 400;
    width: 100%;
    margin-bottom: 5px;
}

.contentHeaderBackground .contentData {
    font-size: 14px;
    color: rgba(0, 0, 0, 0.85);
    font-weight: 600;
    width: 100%;
    margin-bottom: 5px;
}

.contentHeaderBackground .subheading .filterBtn {
    line-height: 24px;
    font-weight: 600;
    margin-left: -10px;
}

.contentHeaderBackground .subheading .filterBtn svg {
    margin-right: 6px;
    margin-top: -4px;
    vertical-align: middle;
}

.contentHeaderBackground :global .ant-input-search>.ant-input-group>.ant-input-group-addon:last-child .ant-input-search-button:not(.ant-btn-primary) :hover {
    border-left: #ff3e5b;
}

.contentHeaderBackground :global .ant-btn-default.ant-btn-dangerous.ant-btn-background-ghost :hover {
    background-color: #ff3e5b;
}

.heading {
    padding-left: 0px !important;
    padding-right: 0px !important;
}

.content {
    border: 1px solid #e8e8e8;
    border-radius: 0 0 4px 4px;
    margin-top: -21px;
    overflow-y: hidden;
    height: 60.6vh;
}

.productHierarchy .content {
    height: 62.6vh;
}

.content .emptyContainer {
    border: none !important;
}

.emptyContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    height: calc(100vh - 170px);
    border: 1px solid #e8e8e8;
    border-radius: 4px;
}

.viewContainer :global .ant-descriptions-view table tbody tr th {
    padding: 8px 10px 2px !important;
}

.viewContainer :global .ant-descriptions-view table tbody tr td {
    padding: 3px 10px 9px !important;
}

.viewContainer :global .ant-descriptions .ant-descriptions-item-label {
    color: rgba(11, 11, 12, 1) !important;
    font-size: 14px !important;
    font-weight: 500;
}

.viewContainer :global .ant-descriptions .ant-descriptions-item-content {
    color: rgba(142, 133, 133, 1) !important;
    font-size: 14px !important;
    display: inline-block;
}

.hierarchyRightContaners {
    border-radius: 4px 4px 0px 0px;
    border: none;
}

.hierarchyRightContaner {
    border-radius: 4px 4px 0px 0px;
    -moz-border-radius: 4px 4px 0px 0px;
    -webkit-border-radius: 4px 4px 0px 0px;
    border: 1px solid #e8e8e8;
    /* height: calc(100vh - 234px); */
    /* overflow-y: auto; */
    margin-top: 0px;
}

.hierarchyRightContaner :global .ant-descriptions .ant-descriptions-header {
    margin-bottom: 0px;
}

.hierarchyRightContaner :global .ant-descriptions .ant-descriptions-view {
    overflow-y: auto;
    height: calc(100vh - 300px);
}

.viewProductDetail :global .ant-descriptions .ant-descriptions-view {
    overflow-y: auto;
    height: calc(100vh - 288px);
}

:global .ant-descriptions .ant-descriptions-view::-webkit-scrollbar-track,
:global .ant-table-wrapper .ant-table .ant-table-content::-webkit-scrollbar-track {
    background-color: #f4f4f4;
}

:global .ant-descriptions .ant-descriptions-view::-webkit-scrollbar,
:global .ant-table-wrapper .ant-table .ant-table-content::-webkit-scrollbar {
    background-color: #f4f4f4;
    width: 5px;
}

:global .ant-descriptions .ant-descriptions-view::-webkit-scrollbar-thumb,
:global .ant-table-wrapper .ant-table .ant-table-content::-webkit-scrollbar-thumb {
    background-color: #c1c1c1;
    border-radius: 10px;
    /* border: 2px solid ; */
}

:global .ant-descriptions .ant-descriptions-view:hover::-webkit-scrollbar {
    width: 5px !important;
}

/* Crticality group allowed timing css*/

.subTitle {
    margin-bottom: 20px;
    font-size: 16px;
    line-height: 24px;
    font-weight: 700;
}

.allowedTimingAlignment {
    padding: 20px 0 !important;
    font-size: 16px;
    line-height: 24px;
    font-weight: 700;
}

.addTimeBtn {
    display: flex;
    align-items: center;
    flex-flow: row-reverse;
}

.viewAllowedTiming button {
    font-size: 14px;
    font-weight: 400;
    line-height: 22px;
    padding-right: 0px;
}

.addTimeBtn button {
    font-size: 14px;
    font-weight: 400;
    line-height: 22px;
    padding-right: 0px;
}

.hideInViewMode {
    visibility: hidden;
}

.timingHeader {
    background-color: #f4f4f4;
    padding: 10px;
    margin-bottom: 1px;
    border-radius: 0;
    border-top-left-radius: 8px !important;
    border-top-right-radius: 8px !important;
    font-size: 14px;
    color: #342c2c;
}

.paddingLeft {
    padding-left: 10px;
    font-size: 16px;
    font-weight: 500;
    line-height: 24px;
}

/* .paddingLeft2 {
    padding-left: 10px;
} */

.allowedTiming {
    background: #f4f4f4;
    border-radius: 8px;
    flex-direction: column;
    align-items: flex-start;
    padding: 20px 0px 20px 20px;
    gap: 20px;
    /* padding-bottom: 0; */
    /* margin-bottom: 20px; */
}
/* ... */

